// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with callback functions 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={1}
    onSelect={[MockFunction]}
    refCallback={[MockFunction]}
    title=""
  />
</Fragment>
`;

exports[`should render with isCollapsed 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={true}
    isCollapsible={false}
    level={1}
    title=""
  />
</Fragment>
`;

exports[`should render with isCollapsible 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={true}
    level={1}
    title=""
  />
</Fragment>
`;

exports[`should render with items 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={1}
    title=""
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="123"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="124"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="125"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="126"
  />
  <ListItem
    hasChevron={false}
    isSelectable={false}
    isSelected={false}
    key="127"
  />
</Fragment>
`;

exports[`should render with no items 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={1}
    title=""
  />
</Fragment>
`;

exports[`should render with title 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={1}
    title="Test Title"
  />
</Fragment>
`;

exports[`should render with title and level 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    title="Test Title"
  />
</Fragment>
`;
